[project]
name = "YantraSolve"
version = "0.1.0"
requires-python = ">=3.12"
description = "YantraSolve is an automated system that uses LLMs to solve data-driven quizzes. It can fetch, clean, analyze, and visualize data, then submit accurate answers in real-time."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Mayank Kumar Poddar", email = "23f3004197@ds.study.iitm.ac.in" },
]
dependencies = [
    "uvicorn>=0.38.0",
]
[project.urls]
homepage = "https://github.com/mynkpdr/yantrasolve#readme"
repository = "https://github.com/mynkpdr/yantrasolve"

dependencies = [
    "fastapi[standard]>=0.121.3",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "prettier>=0.0.7",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.6",
]


[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.ruff]
extend-exclude = [
  "__pycache__",
  ".venv",
]
